fixed header pic on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,61 @@
 /* ABOUT US */
 /* PROJECTS */
 /* TEAM */
+/*CSS RESET*/
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 /*--col-grid--*/
 .col-grid-left {
   background-color: #eee;
@@ -2817,14 +2872,19 @@ h6 {
   font-family: 'Montserrat', sans-serif;
 }
 
-html, body {
+body,
+html {
   margin: 0;
   background: #fff;
   font-family: 'Open Sans', sans-serif;
 }
 
-h4, h5, h6,
-h1, h2, h3 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -2833,12 +2893,14 @@ p {
   margin: 0;
 }
 
-ul, label {
+label,
+ul {
   margin: 0;
   padding: 0;
 }
 
-input[type="button"], input[type="submit"] {
+input[type="button"],
+input[type="submit"] {
   transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -2950,12 +3012,13 @@ h3.title span:after {
   padding: 0;
 }
 
-.bottom-gds:nth-child(3), .bottom-gds:nth-child(4) {
+.bottom-gds:nth-child(3),
+.bottom-gds:nth-child(4) {
   margin-top: 30px;
 }
 
 .creative {
-  background: url(../images/pic3.jpg) no-repeat center;
+  background: url("../images/pic3.jpg") no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
@@ -2986,9 +3049,9 @@ h3.title span:after {
   background-color: #F2593A;
   -webkit-box-shadow: none;
   box-shadow: none;
-  -webkit-transition: width .6s ease;
-  -o-transition: width .6s ease;
-  transition: width .6s ease;
+  -webkit-transition: width 0.6s ease;
+  -o-transition: width 0.6s ease;
+  transition: width 0.6s ease;
 }
 
 .progress-gds {
@@ -3052,7 +3115,7 @@ h3.title span:after {
   height: 32px;
   border: none;
   text-indent: 100%;
-  background: url("../images/arr.png") no-repeat 0px 0px;
+  background: url("../images/arr.png") no-repeat 0 0;
 }
 
 #toTopHover {
@@ -3077,6 +3140,20 @@ h3.title span:after {
   background: url("../images/main6.jpg") no-repeat center;
   background-size: cover;
   background-attachment: fixed;
+}
+
+@media (max-width: 630px) {
+  .header {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    left: 0;
+    top: 0;
+    background: url("../images/main6.jpg") no-repeat center;
+    background-size: cover;
+  }
 }
 
 .head {
